--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -60,7 +60,15 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">Edit</div>
+                            <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
+                                {{(roles == 'Branch Manager' && role.customerKycClassification.kycStatusFromCce == 'approved')}}
+                                <span
+                                    *ngIf="(roles == 'Customer Care Executive' && role.customerKycClassification.kycStatusFromCce == 'pending') || (roles == 'Branch Manager' && role.customerKycClassification.kycStatusFromCce == 'approved' && role.kycStatus == 'pending')">Edit</span>
+                            </div>
+                            <span
+                                *ngIf="(roles == 'Customer Care Executive' && role.customerKycClassification.kycStatusFromCce == 'approved') || (roles == 'Branch Manager' && role.kycStatus == 'approved')">-</span>
+
+
                         </div>
                     </mat-cell>
                 </ng-container>
