--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
@@ -4,25 +4,27 @@
 
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
+                <ng-container matColumnDef="packetId">
+                    <mat-header-cell *matHeaderCellDef>Packet ID</mat-header-cell>
+                    <mat-cell *matCellDef="let role">{{role.packetId | uppercase}}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="customerID">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.customerUniqueId}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.customerId}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.mobileNumber}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.loanId}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="packetId">
-                    <mat-header-cell *matHeaderCellDef>Packet ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.panCardNumber | uppercase}}</mat-cell>
-                </ng-container>
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" class="kt-pointer">Edit</div>
-                            <div class="kt-pointer" class="kt-pointer">Delete</div>
+                            <span class="kt-pointer" class="kt-pointer">Edit</span>
+                            &nbsp; | &nbsp;
+                            <span class="kt-pointer" class="kt-pointer">Delete</span>
                         </div>
                     </mat-cell>
                 </ng-container>
