--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -62,7 +62,7 @@
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
                                 <span
-                                    *ngIf="(roles == 'Customer Care Executive' && role.customerKycClassification.kycStatusFromCce == 'pending') || (roles == 'Branch Manager' && role.customerKycClassification.kycStatusFromCce == 'approved' && role.kycStatus == 'pending')">Edit</span>
+                                    *ngIf="(roles == 'Customer Care Executive' && role.customerKycClassification.kycStatusFromCce == 'pending') || (roles == 'Branch Manager' && role.customerKycClassification.kycStatusFromCce == 'approved' && (role.kycStatus == 'rejected' || role.kycStatus == 'pending'))">Edit</span>
                             </div>
                             <span
                                 *ngIf="(roles == 'Customer Care Executive' && role.customerKycClassification.kycStatusFromCce == 'approved') || (roles == 'Branch Manager' && role.kycStatus == 'approved')">-</span>
