--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -14,9 +14,9 @@
                                     </div>
 
                                     <div class="col align-self-center">
-                                        <input type="file" #file class="d-none"
+                                        <input type="file" accept="image/png, image/jpeg" #files class="d-none"
                                             (input)="getFileInfo($event,'profile')" />
-                                        <label (click)="file.click()" class="kt-pointer text-primary"
+                                        <label (click)="files.click()" class="kt-pointer text-primary"
                                             style="font-weight: 600;">Change Profile
                                             Picture</label>
                                     </div>
@@ -170,7 +170,7 @@
                                                     id="basic-addon2" (click)="signature.click()"
                                                     style="border-top-right-radius: 9px !important; border-bottom-right-radius: 9px !important;">Attach</span>
                                             </div>
-                                            <input type="file" class="d-none" #signature
+                                            <input type="file" accept="image/png, image/jpeg" class="d-none" #signature
                                                 (input)="getFileInfo($event,'signature')">
                                         </div>
                                     </div>
