--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -63,8 +63,8 @@
                         <label class="mandatory">Tenure</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="tenure" class="form-control" (change)="setEndDate()" 
-                        [class.isError]="controls.tenure.touched && controls.tenure.invalid">
+                        <select formControlName="tenure" class="form-control" (change)="setEndDate()"
+                            [class.isError]="controls.tenure.touched && controls.tenure.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Tenure</option>
                             <option [value]="ten" *ngFor="let ten of tenure">{{ten}}</option>
                         </select>
@@ -84,8 +84,9 @@
                         <label class="mandatory">Loan End Date</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020" [matDatepicker]="picker1"
-                        [class.isError]="controls.loanEndDate.touched && controls.loanEndDate.invalid" readonly/>
+                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020"
+                            [matDatepicker]="picker1"
+                            [class.isError]="controls.loanEndDate.touched && controls.loanEndDate.invalid" readonly />
                         <mat-datepicker #picker1></mat-datepicker>
                         <mat-error *ngIf="controls.loanEndDate.errors?.required && controls.loanEndDate.touched">
                             Required field
@@ -100,9 +101,11 @@
                         <label class="mandatory">Loan Amount</label>
                     </div>
                     <div class="col-7">
-                        <input type="number" class="form-control" formControlName="finalLoanAmount" placeholder="0,00,000" 
-                        (blur)="amountValidation()" [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid"/>
-                        <mat-error *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
+                        <input type="number" class="form-control" formControlName="finalLoanAmount"
+                            placeholder="0,00,000" (blur)="amountValidation()"
+                            [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
+                        <mat-error
+                            *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
                             Required field
                         </mat-error>
                         <mat-error *ngIf="controls.finalLoanAmount.errors?.pattern && controls.finalLoanAmount.touched">
@@ -123,11 +126,12 @@
                     </div>
                     <div class="col-7">
                         <select class="form-control" formControlName="paymentFrequency" (change)="getIntrest()"
-                        [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
+                            [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Repay Period</option>
                             <option [value]="pay.value" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
                         </select>
-                        <mat-error *ngIf="controls.paymentFrequency.errors?.required && controls.paymentFrequency.touched">
+                        <mat-error
+                            *ngIf="controls.paymentFrequency.errors?.required && controls.paymentFrequency.touched">
                             Required field
                         </mat-error>
                     </div>
@@ -139,13 +143,13 @@
                         <label class="mandatory">Interest Rate</label>
                     </div>
                     <div class="col-7">
-                        <input type="number" class="form-control" formControlName="interestRate" placeholder="00%" 
-                        [class.isError]="controls.interestRate.touched && controls.interestRate.invalid"/>
+                        <input type="number" class="form-control" formControlName="interestRate" placeholder="00%"
+                            [class.isError]="controls.interestRate.touched && controls.interestRate.invalid" />
                         <mat-error *ngIf="controls.interestRate.errors?.required && controls.interestRate.touched">
                             Required field
                         </mat-error>
                         <mat-error *ngIf="controls.interestRate.errors?.pattern && controls.interestRate.touched">
-                           Invalid Input
+                            Invalid Input
                         </mat-error>
                     </div>
                 </div>
@@ -179,19 +183,39 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Processing Charges</label>
+                        <label>Processing Charges(fixed)</label>
                     </div>
                     <div class="col-7">
-                        <input type="number" class="form-control" formControlName="processingCharge" placeholder="00%" 
-                        [class.isError]="controls.processingCharge.touched && controls.processingCharge.invalid"/>
-                        <mat-error *ngIf="controls.processingCharge.errors?.pattern && controls.processingCharge.touched">
+                        <input type="number" class="form-control" formControlName="processingChargeFixed"
+                            placeholder="00%"
+                            [class.isError]="controls.processingChargeFixed.touched && controls.processingChargeFixed.invalid" />
+                        <mat-error
+                            *ngIf="controls.processingChargeFixed.errors?.pattern && controls.processingChargeFixed.touched">
                             Invalid Input
                         </mat-error>
                     </div>
                 </div>
             </div>
             <div class="col-6">
-                <!-- <div class="row">
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label>Processing Charges(%)</label>
+                    </div>
+                    <div class="col-7">
+                        <input type="number" class="form-control" formControlName="processingChargePercent"
+                            placeholder="00%"
+                            [class.isError]="controls.processingChargePercent.touched && controls.processingChargePercent.invalid" />
+                        <mat-error
+                            *ngIf="controls.processingChargePercent.errors?.pattern && controls.processingChargePercent.touched">
+                            Invalid Input
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- <div class="col-6"> -->
+            <!-- <div class="row">
                     <div class="col-4 form-label">
                         <label class ="mandatory">Current LTV Amount</label>
                     </div>
@@ -199,13 +223,12 @@
                         <input class="form-control" formControlName="currentLtvAmount" placeholder="0,00,000" />
                     </div>
                 </div> -->
-            </div>
+            <!-- </div> -->
 
             <div class="col-6 kt-margin-t-30 kt-margin-b-30">
-                <div class="row">
-                    <div class="offset-4 col">
-                        <kt-button [value]="'Calculate'" [type]="'button'" (action)="calcInterestAmount()"></kt-button>
-                    </div>
+
+                <div class="offset-4 col">
+                    <kt-button [value]="'Calculate'" [type]="'button'" (action)="calcInterestAmount()"></kt-button>
                 </div>
             </div>
         </div>
@@ -213,8 +236,11 @@
     <div class="row justify-content-center kt-margin-b-20" *ngIf="dateOfPayment.length > 0">
         <div class="col-6">
             <div class="row justify-content-center">
-
                 <div class="col-7">
+                    <div>
+                        <label for="" class="text-color font-weight-500">Processing Charges :-
+                            {{controls.processingCharge.value}}</label>
+                    </div>
                     <div class="table-div" id="print">
                         <table class="table table-bordered">
                             <thead>
@@ -240,7 +266,4 @@
             </div>
         </div>
     </div>
-
-
-
 </div>
