--- a/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
@@ -10,7 +10,7 @@
         width: 100%;
         border-radius: 4px;
     }
-    .cancelImage {
+    .removeImage {
         position: absolute;
         top: 0;
         transform: translate(-10px, -5px);
