final loan intreset

--- a/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
@@ -24,8 +24,8 @@
 
                         <div class="row">
                             <!-- Partner Name -->
-                            <div class="col-4">
-                                <label>Branch Name</label>
+                            <div class="col-4 form-label">
+                                <label class="mandatory">Customer Id</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="name" autocomplete="off"
@@ -36,8 +36,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label>Partner Name</label>
+                            <div class="col-4 form-label">
+                                <label class="mandatory">Appraiser Name:</label>
                             </div>
 
                             <div class="col-8">
