--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -8,70 +8,50 @@
                 <ng-container matColumnDef="fullName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
                     <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.firstName | titlecase}}&nbsp;{{role.customer.lastName | titlecase}}
+                    <mat-cell *matCellDef="let loan">{{loan.customer.firstName | titlecase}}&nbsp;{{loan.customer.lastName | titlecase}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerID">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.customerUniqueId}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan.customer.customerUniqueId}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobile">
                     <mat-header-cell *matHeaderCellDef>Mobile No.</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.mobileNumber}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan.customer.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef>PAN</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.panCardNumber | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan.customer.panCardNumber | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.state.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan.finalLoan.loanStartDate | date: 'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="schemeName">
                     <mat-header-cell *matHeaderCellDef>Scheme Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.finalCalculator.schemeName | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan.finalLoan.scheme.schemeName | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="appraisalApproval">
                     <mat-header-cell *matHeaderCellDef>Appraisal Approval</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        {{role.loanStatusForAppraiser}}>
+                    <mat-cell *matCellDef="let loan">
+                        {{loan.loanStatusForAppraiser | titlecase}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bMApproval">
                     <mat-header-cell *matHeaderCellDef>Loan Application</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        {{role.loanStatusForBM}}>
+                    <mat-cell *matCellDef="let loan">
+                        {{loan.loanStatusForBM | titlecase}}
                     </mat-cell>
                 </ng-container>
-
-                <!-- <ng-container matColumnDef="time">
-                    <mat-header-cell *matHeaderCellDef >Time</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'shortTime'}}</mat-cell>
-                </ng-container> -->
-
-                <ng-container matColumnDef="status">
-                    <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span class="text-success" *ngIf="role.status.id == '1'">
-                            {{role.status.statusName | titlecase}} </span>
-                        <span class="text-warning" *ngIf="role.status.id == '2'">
-                            {{role.status.statusName | titlecase}}
-                        </span>
-                        <span class="text-danger" *ngIf="role.status.id == '3'">
-                            {{role.status.statusName | titlecase}}
-                        </span>
-                    </mat-cell>
-                </ng-container>
-
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
+                    <mat-cell *matCellDef="let loan">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editLead(role)" class="kt-pointer">Edit</div>
+                            <div class="kt-pointer" (click)="editLoan(loan)" class="kt-pointer">Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
