--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -77,7 +77,7 @@
                         <label for="" class="text-color">LTV %</label>
                     </div>
                     <div class="col-6">
-                        <select class="form-control" formControlName="ltvPercent">
+                        <select class="form-control" formControlName="ltvPercent" (change)="chnageLtvPercent()">
                             <option value="" [disabled]="true" [selected]="true">Select Purity</option>
                             <option [value]="purity" *ngFor="let purity of purity">{{purity}} %</option>
                         </select>
