--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
@@ -3,24 +3,29 @@
         height: 79vh !important; //set table height
     }
     .mat-column-fullName{
-        flex: 0 0 14% !important;
+        flex: 0 0 10% !important;
         padding-left: 5px !important;
-
     }
     .mat-column-mobile{
         flex: 0 0 10% !important;
     }
     .mat-column-pan{
-        flex: 0 0 9% !important;
+        flex: 0 0 10% !important;
+    }
+    .mat-column-internalBranch{
+        flex: 0 0 10% !important;
     }
     .mat-column-state{
-        flex: 0 0 11% !important;
+        flex: 0 0 10% !important;
     }
     .mat-column-city{
-        flex: 0 0 12% !important;
+        flex: 0 0 10% !important;
+    }
+    .mat-column-pincode{
+        flex: 0 0 10% !important;
     }
     .mat-column-date{
-        flex: 0 0 14% !important;
+        flex: 0 0 10% !important;
     }
     .mat-column-status{
         flex: 0 0 10% !important;
@@ -31,7 +36,7 @@
 
     }
     .mat-column-actions{
-        flex: 0 0 6% !important;
+        flex: 0 0 10% !important;
 
     }
 }
