--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
@@ -14,6 +14,7 @@
                 <div class="row kt-padding-10" *ngFor="let schemeDeatils of scheme.schemes">
 
                     <div class="col-2 from-style">
+                        <h4>{{ schemeDeatils.schemeName | titlecase}}</h4>
                         <span class="text-gray">From</span>
                         <h3>
                             {{schemeDeatils.schemeAmountStart | schemeAmount }}
