--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.scss
@@ -2,41 +2,47 @@
     .mat-table__wrapper {
         height: 79vh !important; //set table height
     }
+    ::ng-deep.mat-row,
+    ::ng-deep.mat-header-row{
+        width: 100% !important;
+    }
     .mat-column-fullName{
-        flex: 0 0 10% !important;
+        flex: 0 0 12% !important;
         padding-left: 5px !important;
     }
     .mat-column-mobile{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-pan{
-        flex: 0 0 10% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-internalBranch{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-state{
-        flex: 0 0 10% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-city{
-        flex: 0 0 10% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-pincode{
-        flex: 0 0 10% !important;
+        flex: 0 0 6% !important;
     }
     .mat-column-date{
-        flex: 0 0 10% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-status{
-        flex: 0 0 10% !important;
+        flex: 0 0 12% !important;
 
+    }
+    .border-apply{
+        border: 1.5px solid !important;
     }
     .mat-column-kyc{
-        flex: 0 0 10% !important;
-
+        flex: 0 0 12% !important;
     }
     .mat-column-actions{
-        flex: 0 0 10% !important;
+        flex: 0 0 7% !important;
 
     }
 }
