Completed Design Upload

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
@@ -3,28 +3,41 @@
         <div class="row row-no-padding row-col-separator-xl">
             <div class="col-12 text-center">
                 <h5 class="text-dark">To upload your design click here on Choose File.</h5>
-                <p class="pt-4 pb-3">
+                <p class="pt-4">
                     <label for="file-upload" class="custom-file-upload font-weight-500">
                         Choose File
                     </label>
-                    <input id="file-upload" type="file" accept="image/*" (change)="getFileDetails($event)" multiple />
-
-                    <!-- <input type="file" multiple (change)="getFileDetails($event)" id="designs_input" accept="image/*"> -->
+                    <input #file id="file-upload" type="file" accept='image/*' (change)="uploadImages($event)"
+                        multiple />
                     <span *ngIf="greaterThanFiftyImageError">
                         <strong class="displayError">Maximum Limit Is 50 Images</strong>
                     </span>
                 </p>
+                <p class="text-danger" *ngIf="improperCount">{{improperCount}} image is not as per the dimension in
+                    guideline</p>
                 <div *ngIf="!files.length">
                     <p>No files are choosen</p>
-                    <!-- <p>Design image parameters guideline for upload images:</p>
-                    <div>Size of image - Maximum 1 MB</div>
-                    <div>Image dimensions - 1500 pixels x 1500 pixels</div> -->
                 </div>
                 <div *ngIf="files.length">
                     <p>{{files.length}} files are selected to upload</p>
+                    <!-- <div class="row">
+                            <div class="col-8 offset-2">
+                                <div class="row">
+                                    <div class="col-3" *ngFor="let file of filesPreview">
+                                        <img [src]="file" class="border" style="width: 100%; height:100%;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
                 </div>
-                <p>Note: The design name must be as per the SKUCODE of products, which are already uploaded for eg.
-                    SKUCODE_1</p>
+                <div class="col-8 offset-3 text-left">
+                    <p class="font-weight-500">Design image parameters guideline for upload images:</p>
+                    <div>Size of image - Maximum 1 MB</div>
+                    <p>Image dimensions - 1500 pixels x 1500 pixels</p>
+                </div>
+
+                <p><span class="font-weight-500">Note:</span> The design name must be as per the SKUCODE of products,
+                    which are already uploaded for eg.SKUCODE_1</p>
                 <p>
                     <!-- <button type="button " (click)="uploadFiles()" cdkFocusInitial
                         [disabled]="greaterThanFiftyImageError || greaterThanFiftyImageButton ">
